--- a/ExtratoApp/src/app/pages/cadastro/cadastro.component.html
+++ b/ExtratoApp/src/app/pages/cadastro/cadastro.component.html
@@ -1,1 +1,1 @@
-<app-lancamento-form [btnAcao]="btnAcao" [btnTitulo]="btnTitulo" (onSubmit)="createFuncionario($event)"></app-lancamento-form>
+<app-lancamento-form [btnAcao]="btnAcao" [btnTitulo]="btnTitulo" (onSubmit)="createLancamento($event)"></app-lancamento-form>
