--- a/ExtratoApp/src/app/pages/editar/editar.component.html
+++ b/ExtratoApp/src/app/pages/editar/editar.component.html
@@ -2,7 +2,7 @@
   <app-lancamento-form [btnAcao]="btnAcao"
                         [btnTitulo]="btnTitulo"
                         [dadosLancamento]="lancamento"
-                        (onSubmit)="editarFuncionario($event)"
+                        (onSubmit)="editarLancamento($event)"
 
   ></app-lancamento-form>
 </div>
