--- a/ExtratoApp/src/styles.css
+++ b/ExtratoApp/src/styles.css
@@ -1,20 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 html, body{
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+  justify-self: auto;
   /*font-size: 62.5%;*/
 }
 
 mat-card {
-  width: 80%;
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
+  margin: auto auto;
   padding: 3rem;
-  margin-top: 5rem;
 }
 
 mat-form-field {
