--- a/ExtratoApp/src/app/pages/home/home.component.html
+++ b/ExtratoApp/src/app/pages/home/home.component.html
@@ -3,12 +3,30 @@
     <button routerLink="" mat-raised-button color="">Extrato de conta corrente</button>
     <button routerLink="/cadastro" mat-raised-button color="primary">Cadastrar novo lançamento</button>
   </div>
-  <div class="filtro-datas">
+
+  <div [formGroup]="myGroup" class="filtro-datas">
+    <mat-form-field>
+      <mat-label>Filtre por data</mat-label>
+      <mat-date-range-input [rangePicker]="rangePicker">
+        <input matInput matStartDate placeholder="Data inicial" [value]="dayago" formControlName="dayago">
+        <input matInput matEndDate placeholder="Data final" [value]="date" formControlName="date">
+      </mat-date-range-input>
+      <mat-datepicker-toggle matIconSuffix [for]="rangePicker"></mat-datepicker-toggle>
+      <mat-date-range-picker #rangePicker>
+        <mat-date-range-picker-actions>
+          <button mat-button matDateRangePickerCancel>Cancelar</button>
+          <button mat-raised-button color="primary" matDateRangePickerApply (click)="onDateRangeApply()">Definir</button>
+        </mat-date-range-picker-actions>
+      </mat-date-range-picker>
+    </mat-form-field>
+  </div>
+
+<!--   <div [formGroup]="myGroup" class="filtro-datas">
     <mat-form-field >
       <mat-label>Filtre por data</mat-label>
       <mat-date-range-input [rangePicker]="rangePicker">
-        <input matStartDate placeholder="Data inicial" [value]="dayago.value">
-        <input matEndDate placeholder="Data final" [value]="date.value">
+        <input matInput matStartDate placeholder="Data inicial" [value]="dayago.value" formControlName="dayago">
+        <input matInput matEndDate placeholder="Data final" [value]="date.value" formControlName="date">
       </mat-date-range-input>
       <mat-datepicker-toggle matIconSuffix [for]="rangePicker"></mat-datepicker-toggle>
       <mat-date-range-picker #rangePicker>
@@ -18,8 +36,8 @@
         </mat-date-range-picker-actions>
       </mat-date-range-picker>
     </mat-form-field>
-
   </div>
+ -->
   <table mat-table [dataSource]="lancamentos" class="mat-elevation-z8">
     <ng-container matColumnDef="Status">
       <th mat-header-cell *matHeaderCellDef> Status </th>
