Revisão de requisitos

--- a/ExtratoApp/src/app/componentes/lancamento-form/lancamento-form.component.html
+++ b/ExtratoApp/src/app/componentes/lancamento-form/lancamento-form.component.html
@@ -1,5 +1,9 @@
 <mat-card>
 <h1>{{ btnTitulo}}</h1>
+<div *ngIf="dadosLancamento?.status" aria-readonly="true">
+
+
+</div>
 
 <form [formGroup]="lancamentoForm" (ngSubmit)="submit()" #formDit="ngForm">
 
@@ -8,7 +12,7 @@
   <div class="input_box">
     <mat-form-field>
       <mat-label for="">Descrição :</mat-label>
-      <input matInput type="text" formControlName="descricao" placeholder="Lançamento de ...">
+      <input matInput type="text" formControlName="descricao" placeholder="Lançamento de ..." readonly>
     </mat-form-field>
   </div>
 
@@ -23,7 +27,7 @@
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
 
-  <div class="input_box">
+  <div class="input_box" >
     <mat-form-field>
       <mat-label for="">Valor :</mat-label>
       <input matInput type="number" formControlName="valor" placeholder="R$" required>
@@ -31,7 +35,7 @@
   </div>
 
 <div class="btn-box">
-  <button type="submit"  mat-raised-button color="accent">{{btnAcao}}</button>
+  <button type="submit"  mat-raised-button color="accent" *ngIf="!dadosLancamento?.status" readonly>{{btnAcao}}</button>
   <button routerLink=""  mat-raised-button color="basic">Voltar</button>
 </div>
 
