--- a/ExtratoApp/src/app/pages/detalhes/detalhes.component.html
+++ b/ExtratoApp/src/app/pages/detalhes/detalhes.component.html
@@ -40,7 +40,7 @@
     </mat-form-field>
     </div>
     <div class="btn-box">
-      <button (click)="CancelarLancamento()" mat-raised-button color="warn" >Cancelar Lancamento</button>
+      <button (click)="CancelarLancamento()" mat-raised-button color="warn" *ngIf="!lancamento?.status" readonly>Cancelar Lancamento</button>
       <button routerLink="" mat-raised-button>Voltar</button>
     </div>
   </form>
