--- a/ExtratoApp/src/app/pages/home/home.component.html
+++ b/ExtratoApp/src/app/pages/home/home.component.html
@@ -21,23 +21,6 @@
     </mat-form-field>
   </div>
 
-<!--   <div [formGroup]="myGroup" class="filtro-datas">
-    <mat-form-field >
-      <mat-label>Filtre por data</mat-label>
-      <mat-date-range-input [rangePicker]="rangePicker">
-        <input matInput matStartDate placeholder="Data inicial" [value]="dayago.value" formControlName="dayago">
-        <input matInput matEndDate placeholder="Data final" [value]="date.value" formControlName="date">
-      </mat-date-range-input>
-      <mat-datepicker-toggle matIconSuffix [for]="rangePicker"></mat-datepicker-toggle>
-      <mat-date-range-picker #rangePicker>
-        <mat-date-range-picker-actions>
-          <button mat-button matDateRangePickerCancel>Cancelar</button>
-          <button mat-raised-button color="primary" matDateRangePickerApply>Definir</button>
-        </mat-date-range-picker-actions>
-      </mat-date-range-picker>
-    </mat-form-field>
-  </div>
- -->
   <table mat-table [dataSource]="lancamentos" class="mat-elevation-z8">
     <ng-container matColumnDef="Status">
       <th mat-header-cell *matHeaderCellDef> Status </th>
@@ -54,7 +37,7 @@
     </ng-container>
     <ng-container matColumnDef="Tipo">
       <th mat-header-cell *matHeaderCellDef> Tipo </th>
-      <td mat-cell *matCellDef="let lancamento"> {{lancamento.avulso == 'Avulso' ? 'Automático' : 'Avulso'}} </td>
+      <td mat-cell *matCellDef="let lancamento"> {{lancamento.avulso == 'Avulso' ? 'Avulso' : 'Não Avulso'}} </td>
     </ng-container>
     <ng-container matColumnDef="Código">
       <th mat-header-cell *matHeaderCellDef> Código </th>
