--- a/ExtratoApp/src/app/pages/detalhes/detalhes.component.html
+++ b/ExtratoApp/src/app/pages/detalhes/detalhes.component.html
@@ -1,6 +1,5 @@
 <mat-card>
-<div>Detalhes Lançamento</div>
-
+  <h1 style="color: aliceblue;">Detalhes Lançamento</h1>
 <div>
   <form>
     <div class="input_box">
