--- a/ExtratoApp/src/app/pages/home/home.component.html
+++ b/ExtratoApp/src/app/pages/home/home.component.html
@@ -53,7 +53,7 @@
     </ng-container>
     <ng-container matColumnDef="Valor">
       <th mat-header-cell *matHeaderCellDef> Valor </th>
-      <td mat-cell *matCellDef="let lancamento"> {{lancamento.valor}} </td>
+      <td mat-cell *matCellDef="let lancamento" [ngClass]="lancamento.valor < 0 ? 'valor-negativo' : ''"> {{lancamento.valor | currency : 'BRL'}} </td>
     </ng-container>
     <ng-container matColumnDef="Ações">
       <th mat-header-cell *matHeaderCellDef></th>
